# THE-HYPERCODE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  HyperCode Deep Dive Analysis.txt  README.md  RELEASE_NOTES_V3.md  ROADMAP.md  Standard Library Enhancement Plan1.txt  TOOLS_GUIDE.md  WelshDog-Paper.md  hypercode_academic_strategy.md  hypercode_demo_script.md  hypercode_mega_audit_consolidated.md  new  pyproject.toml  recommended next steps  render.yaml  setup.py  test_v3_full.py
hypercode-v1/: .codeiumignore  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_PROJECT_SETUP.md  HYPER_DATABASE.json  HyperAUTO  HyperCode-Research-2025.md  LICENSE  Makefile  README.md  START_HERE.md  add more Ai likes  code_quality_report.py  data analyze  database_analysis_report.txt  database_analyzer.py  e -Force .hypercode  env.example  fix_database_issues.py  format_and_lint.py  functools.lru_cache  gitignore-template  hyper_migrate_v2.py  hypercode-database.json  hypercode-research-database-deep.json  hypercode-schema  hypercode_db.py  hypercode_manager  hypercode_project_data.json  hypercode_schema.json  hypercode_spec.json  isort.cfg  make.bat  (+18 more)
hypercode-v1/.github/: PULL_REQUEST_TEMPLATE.md  ci-latency-baseline.json  dependabot.yml
hypercode-v1/.hypercode/: sync.toml
hypercode-v1/.snapshots/: readme.md  sponsors.md
hypercode-v1/5 Core TypeScript Modules/: README.md  code-analyzer.ts  extension.ts  package.json  spatial-visualizer.ts  tsconfig.json  visualization-panel.ts
hypercode-v1/accessibility/: adhd_optimizer.py  autism_preset.py  (+3 more)
(+632 files in other folders)
