[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercode"
version = "0.1.0"
description = "A robust data manager with versioning and validation"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.2.0",
    "pytest-asyncio>=0.20.0",
    
    # Linting & Formatting
    "black>=22.12.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=23.3.23",
    "flake8-comprehensions>=3.10.1",
    "pep8-naming>=0.13.2",
    
    # Type checking
    "mypy>=1.0.0",
    "types-python-dateutil>=2.8.19.0",
    "types-requests>=2.28.11.0",
    "types-setuptools>=65.6.0.0",
    
    # Documentation
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.22.0",
    "myst-parser>=1.0.0",
    
    # Development tools
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "coverage>=7.0.0",
]

[project.scripts]
hypercode-cli = "hypercode.cli:cli"

[tool.setuptools]
packages = ["hypercode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'